fixed path and war naming

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>xml</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
-    <name>xml</name>
+    <name>visiteur</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -111,7 +111,7 @@
     </dependencies>
 
     <build>
-        <finalName>xml</finalName>
+        <finalName>visiteur</finalName>
 
         <plugins>
             <plugin>
